--- a/MySkillsPage.html
+++ b/MySkillsPage.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Project</title>
@@ -37,12 +41,17 @@
   </head>
 
   <body class="bg-dark p-2 text-white bg-opacity-80">
+    <div class="upArrow rounded-circle">
+      <a class="upAnchor" href="#header-placeholder"
+        ><i class="fa-solid fa-arrow-up"></i
+      ></a>
+    </div>
     <div id="header-placeholder"></div>
 
     <br />
     <br />
     <br />
-    <div class="skills_intro" style="text-align: center">
+    <div class="skills_intro">
       <p>
         <b
           >Hey! You're welcome to my skills stats page. Click below button to
@@ -50,58 +59,12 @@
         >
       </p>
       <br />
-      <a class="small_link" href="#here_are_skill">Explore</a>
+      <a class="small_link" href="#myProjectHeading">Explore</a>
     </div>
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
+
+    <p id="myProjectHeading" class="career-heading rounded-pill">
+      <b>My Skills</b>
+    </p>
     <div id="here_are_skill" style="color: black; user-select: none">
       <a class="linkclr" href="#"> <i class="fa-solid fa-c"></i></a>
       <a class="linkclr" href="#"
@@ -143,12 +106,12 @@
           text-align: center;
         "
       >
-        <p>
+        <p class="codingPlatformStates">
           <i class="fa-solid fa-arrow-left"></i>MY CODING PLATFORMS<i
             class="fa-solid fa-arrow-right"
           ></i>
         </p>
-        <p>CLICK TO SEE STATS</p>
+        <p class="codingPlatformStates">CLICK LEFT OR RIGHT TO SEE STATS</p>
       </div>
       <div class="codePlatform z-0">
         <a
