--- a/My_Projects.html
+++ b/My_Projects.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>New Project</title>
@@ -33,9 +37,15 @@
   </head>
 
   <body class="bg-dark p-2 text-white bg-opacity-80">
+    <div class="upArrow rounded-circle">
+      <a class="upAnchor" href="#imported-content-placeholder"
+        ><i class="fa-solid fa-arrow-up"></i
+      ></a>
+    </div>
     <div id="imported-content-placeholder"></div>
 
     <div class="tbl">
+      <p class="career-heading"><b>My Projects</b></p>
       <table id="checktbl">
         <tr>
           <th>Project Name</th>
