--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 </head>
 
 <body class="bg-dark p-2 text-white bg-opacity-80 ">
+   <div class="upArrow rounded-circle">
+      <a class="upAnchor" href="#imported-content-placeholder"
+        ><i class="fa-solid fa-arrow-up"></i
+      ></a>
+    </div>
    <!-- <iframe src="CommonFiles/header.html" width="100%" height="55vh" frameborder="0"></iframe> -->
    <div id="imported-content-placeholder"></div>
    <!--  <div class="dropdown">
