--- a/CareerStats.html
+++ b/CareerStats.html
@@ -25,6 +25,7 @@
       body {
         background-image: url(ImgAsset/careerBG.jpg);
         background-size: cover;
+        overflow-x: hidden;
       }
       .dropdown {
         margin-top: 20px;
@@ -50,7 +51,7 @@
         >
         <a class="subCareer" id="subCareer2" href="#experience">Experience</a>
       </div>
-      <p class="career-heading rounded"><b>Career Statistics</b></p>
+      <p class="career-heading rounded mt-5"><b>Career Statistics</b></p>
       <div>
         <p
           class="career-heading-subpart"
@@ -135,7 +136,7 @@
             <i class="fa-solid fa-book-open-reader fs-2 p-4"></i>
             <p class="fs-5"><b>2022-2025</b></p>
           </div>
-          <p class="fs-1 z-2"><b>Graduation(BTech Engineering)</b></p>
+          <p class="fs-1 z-2"><b>Graduation (BTech Engineering)</b></p>
           <button
             onclick="careerOpen(this)"
             class="w-25 rounded z-2"
