--- a/MySkillsPage.html
+++ b/MySkillsPage.html
@@ -41,7 +41,7 @@
   </head>
 
   <body class="bg-dark p-2 text-white bg-opacity-80">
-    <div class="upArrow rounded-circle">
+    <div class="upArrow z-3 rounded-circle">
       <a class="upAnchor" href="#header-placeholder"
         ><i class="fa-solid fa-arrow-up"></i
       ></a>
@@ -62,8 +62,12 @@
       <a class="small_link" href="#myProjectHeading">Explore</a>
     </div>
 
-    <p id="myProjectHeading" class="career-heading rounded-pill">
-      <b>My Skills</b>
+    <p
+      id="myProjectHeading"
+      style="font-weight: bold"
+      class="text-center career-heading rounded-pill"
+    >
+      My Skills
     </p>
     <div id="here_are_skill" style="color: black; user-select: none">
       <a class="linkclr" href="#"> <i class="fa-solid fa-c"></i></a>
@@ -86,11 +90,12 @@
     <br />
     <div
       class="d-flex flex-row justify-content-center justify-content-around bg-transparent"
+      style="overflow: hidden"
     >
       <div class="codePlatform">
         <a href="https://leetcode.com/ArnabKundu123/"
           ><img
-            style="width: 20vw; height: 20vw"
+            style="width: 20vw; height: 20vw; overflow: hidden"
             src="https://coderaky.com/images/icons/leetcode.png"
             alt=""
         /></a>
@@ -102,7 +107,7 @@
           font-weight: bolder;
           padding-left: -50%;
           padding-right: -50%;
-          margin-top: 5rem;
+          margin-top: 5%;
           text-align: center;
         "
       >
@@ -117,7 +122,7 @@
         <a
           href="https://www.codingninjas.com/studio/profile/97bc5090-3110-4250-8496-4542d7e3b389"
           ><img
-            style="width: 20vw; height: 20vw"
+            style="width: 20vw; height: 20vw; overflow: hidden"
             src="https://anoojraj07.github.io/Portfolio/cs.png"
             alt=""
         /></a>
