--- a/CommonFiles/header.html
+++ b/CommonFiles/header.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>header2</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -15,70 +20,60 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="../CssAsset/PortFolio.css" />
+    <style>
+      body {
+        overflow-x: hidden;
+      }
+    </style>
   </head>
   <body>
-    <nav
-      class="navbar navbar-expand-lg bg-body-tertiary z-3"
-      class="navbar bg-dark border-bottom border-bottom-dark"
-      style="position: fixed; width: 100%"
-      data-bs-theme="dark"
-    >
-      <div class="container-fluid">
-        <a id="Home" class="navbar-brand" href="../index.html">Home</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
+    <nav class="NavContainer ms-1 me-3 z-3 p-2">
+      <div class="d-flex justify-content-between">
+        <a
+          class="NavAnchor pt-2 pb-2"
+          style="color: rgba(255, 217, 0, 0.884)"
+          href="../index.html"
+          >Home</a
         >
-          <span class="navbar-toggler-icon"></span>
+
+        <ul id="ItemRow" class="d-flex flex-grow-1 mb-0 NavUl pt-2 pb-2">
+          <li class="NavItems">
+            <a class="NavAnchor" href="../MySkillsPage.html">My Skills</a>
+          </li>
+          <li class="NavItems">
+            <a class="NavAnchor" href="../My_Projects.html">My Projects</a>
+          </li>
+          <li class="NavItems">
+            <a class="NavAnchor" href="../CareerStats.html">CareerStats</a>
+          </li>
+          <li class="NavItems">
+            <a class="NavAnchor" href="#foot">Contact</a>
+          </li>
+        </ul>
+        <button onclick="NavButton(this)" class="NavBtn d-none">
+          <i class="fa-solid fa-bars"></i>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a
-                class="nav-link active"
-                id="myskills"
-                href="../MySkillsPage.html"
-                >My Skills</a
-              >
-            </li>
-            <li class="nav-item" onclick="func1(this)">
-              <a
-                id="myskills"
-                class="nav-link active"
-                class="navbar-brand"
-                aria-current="page"
-                href="../My_Projects.html"
-                >My Projects</a
-              >
-            </li>
-            <li class="nav-item" onclick="func1(this)">
-              <a
-                id="myskills"
-                class="nav-link active"
-                class="navbar-brand"
-                aria-current="page"
-                href="../CareerStats.html"
-                >Career Stats</a
-              >
-            </li>
-            <li class="nav-item" onclick="func1(this)">
-              <a
-                id="myskills"
-                class="nav-link active"
-                class="navbar-brand"
-                aria-current="page"
-                href="#foot"
-                >Contact
-              </a>
-            </li>
-          </ul>
-        </div>
       </div>
+      <ul
+        id="ItemColumn"
+        style="display: none"
+        class="flex-column NavUl pt-2 pb-0 ps-0"
+      >
+        <li class="NavItems ms-0 pb-2 border-bottom">
+          <a class="NavAnchor text-opacity-25" href="../MySkillsPage.html"
+            >My Skills</a
+          >
+        </li>
+        <li class="NavItems ms-0 pb-2 border-bottom">
+          <a class="NavAnchor" href="../My_Projects.html">My Projects</a>
+        </li>
+        <li class="NavItems ms-0 pb-2 border-bottom">
+          <a class="NavAnchor" href="../CareerStats.html">CareerStats</a>
+        </li>
+        <li class="NavItems ms-0">
+          <a class="NavAnchor" href="#foot">Contact</a>
+        </li>
+      </ul>
     </nav>
     <script src="../JsAsset/head.js"></script>
     <script
