creating dependencies for connecting project(footer) with database

--- a/CommonFiles/headerNew.html
+++ b/CommonFiles/headerNew.html
@@ -35,7 +35,7 @@
         <a
           class="NavAnchor pt-2 pb-2"
           style="color: rgba(255, 217, 0, 0.884)"
-          href="../index.html"
+          href="/index"
           ><img
             class="headerLogo rounded"
             src="../ImgAsset/AK_logo_main.jpeg"
@@ -44,13 +44,13 @@
 
         <ul id="ItemRow" class="d-flex flex-grow-1 mb-0 NavUl pt-2 pb-2">
           <li class="NavItems">
-            <a class="NavAnchor" href="../MySkillsPage.html">My Skills</a>
+            <a class="NavAnchor" href="/MySkillsPage">My Skills</a>
           </li>
           <li class="NavItems">
-            <a class="NavAnchor" href="../My_Projects.html">My Projects</a>
+            <a class="NavAnchor" href="/My_Projects">My Projects</a>
           </li>
           <li class="NavItems">
-            <a class="NavAnchor" href="../CareerStats.html">CareerStats</a>
+            <a class="NavAnchor" href="/CareerStats">CareerStats</a>
           </li>
           <li class="NavItems">
             <a class="NavAnchor" href="#foot">Contact</a>
