--- a/MySkillsPage.html
+++ b/MySkillsPage.html
@@ -27,6 +27,7 @@
     <style>
       body {
         background-image: url(ImgAsset/BG\ coding\ image\ 1.jpg);
+        background-size: cover;
         overflow-x: hidden !important;
       }
 
