--- a/index.html
+++ b/index.html
@@ -43,10 +43,11 @@
             <a href="index.html" class="btn btn-success">HomePage</a>
       </div>
    </div>
-   <p class="homeFirstElement mt-5" ><b>I am generally known to everyone for some of my qualities like :- </b></p>
-   <div class="fs-3 fw-bolder " style="text-align: center;text-decoration: underline;">
+   <p class="mt-5 fs-2" ><b>I am generally known to everyone for some of my qualities like :- </b></p>
+   <p class="homeFirstElement fs-1 rounded"></p>
+   <div class="fs-3 fw-bolder text-center" >
       <i class="fa-solid fa-down-long text-success"></i> 
-      -:My Life Motto:-
+      <span style="color: goldenrod;">-:My Life Motto:-</span>
       <i class="fa-solid fa-down-long text-success"></i>
    </div>
       
@@ -66,7 +67,7 @@
 </div>
    <div style="font-size: larger;"><b><u>MY DAY TO DAY LIFESTYLE:-</u></b></div>
    <br>
-   <div class="accordion" id="accordionExample">
+   <div class="accordion mb-4" id="accordionExample">
       <div class="accordion-item">
          <h2 class="accordion-header">
             <button class="accordion-button expander down" type="button" data-bs-toggle="collapse"
