--- a/CommonFiles/footer.html
+++ b/CommonFiles/footer.html
@@ -7,6 +7,80 @@
   </head>
   <body>
     <div id="foot">
+      <div class="d-flex flex-column justify-content-center fs-1 fw-bold text-black">
+        <p class="text-center">Hey My lovely <span class="text-warning fw-bolder">Viewers!!</span></p>
+        <p class="text-center">
+          Please put your valuable <span class="text-warning fw-bolder">feedback </span>below
+        </p>
+      </div>
+      <div class="container position-relative">
+        <div class="footMsg">
+          <form action="/index.html" method="POST">
+            <div class="row">
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="First name"
+                  aria-label="First name"
+                  name="FirstName"
+                />
+              </div>
+              <div class="col">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="Last name"
+                  aria-label="Last name"
+                  name="LastName"
+                />
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="formGroupExampleInput2" class="form-label" ></label>
+                <span class="fw-bold" style="color: black !important;">MOBILE NO.</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                name="MobileNumber"
+                id="formGroupExampleInput"
+                placeholder="Example input placeholder"
+              />
+            </div>
+            <div class="mb-3">
+              <label for="formGroupExampleInput2" class="form-label" ></label>
+                <span class="fw-bold" style="color: black !important;">COLLEGE NAME</span></label
+              >
+              <input
+                type="text"
+                class="form-control"
+                id="formGroupExampleInput2"
+                name="CollegeName"
+                placeholder="Another input placeholder"
+              />
+            </div>
+            <div class="form-floating">
+              <label for="formGroupExampleInput2" class="form-label" ></label>
+                <span class="fw-bold" style="color: black !important;">MESSAGE</span></label
+              >
+              <textarea
+                class="form-control mb-3"
+                placeholder="Leave a comment here"
+                id="floatingTextarea2"
+                name="Message"
+                style="height: 100px"
+              ></textarea>
+              <label for="floatingTextarea2">Comments</label>
+            </div>
+            <div class="d-grid gap-2 col-3 mx-auto mb-2">
+              <button class="btn btn-warning" type="submit">Button</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="footLogo d-flex flex-row justify-content-center">
       <a href="https://www.facebook.com/arya.sengupta.714"
         ><img src="../ImgAsset/FacebookLogo.png" height="50px" width="50px"
       /></a>
@@ -23,7 +97,8 @@
         ><img src="../ImgAsset/github_logo2.jpg" height="33px" width="31px"
       /></a>
     </div>
-    <p class="text-light text-center">
+
+    <p class="text-light text-center text-warning">
       © 2023 Arnab Kundu. All rights reserved.
     </p>
   </body>
