structure files better way

--- a/public/Career/index.html
+++ b/public/Career/index.html
@@ -21,6 +21,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="CssAsset/CareerStats.css" />
+    <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
         background-image: url(ImgAsset/careerBG.jpg);
@@ -188,7 +189,7 @@
       </div>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="JsAsset/Career.js"></script>
+    <script src="jsAsset/Career.js"></script>
     <script>
       fetch("CommonFiles/header.html")
         .then((response) => response.text())
