--- a/public/Career/CommonFiles/footer.html
+++ b/public/Career/CommonFiles/footer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../CssAsset/PortFolio.css" />
+    <link rel="stylesheet" href="../../CssAsset/PortFolio.css" />
   </head>
   <body>
     <div id="foot">
@@ -15,7 +15,7 @@
       </div>
       <div class="container position-relative">
         <div class="footMsg">
-          <form action="/index.html" method="POST">
+          <form action="/index" method="POST">
             <div class="row">
               <div class="col">
                 <input
@@ -82,19 +82,19 @@
     </div>
     <div class="footLogo d-flex flex-row justify-content-center">
       <a href="https://www.facebook.com/arya.sengupta.714"
-        ><img src="../ImgAsset/FacebookLogo.png" height="50px" width="50px"
+        ><img src="ImgAsset/FacebookLogo.png" height="50px" width="50px"
       /></a>
       <a style="margin-top: 4px" href="https://www.instagram.com/arnab_tech.01/"
-        ><img src="../ImgAsset/InstaLogo.png" height="40px" width="50px"
+        ><img src="ImgAsset/InstaLogo.png" height="40px" width="50px"
       /></a>
       <a
         style="margin: 6px 8px 0px 10px"
         class="linkedin"
         href="https://www.linkedin.com/in/arnab-kundu-29aa0422b?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BOkUadgXxQlewYQi%2Bv%2Fn0xA%3D%3D"
-        ><img src="../ImgAsset/linkedinLogo3.jpg" height="34px" width="32px"
+        ><img src="ImgAsset/linkedinLogo3.jpg" height="34px" width="32px"
       /></a>
       <a style="margin: 5px 0px 0px 10px" href="https://github.com/ArnabKundu10"
-        ><img src="../ImgAsset/github_logo2.jpg" height="33px" width="31px"
+        ><img src="ImgAsset/github_logo2.jpg" height="33px" width="31px"
       /></a>
     </div>
 
