--- a/public/Skills/index.html
+++ b/public/Skills/index.html
@@ -24,6 +24,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
     <link rel="stylesheet" href="CssAsset/myskills.css" />
+    <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
         background-image: url(ImgAsset/BG\ coding\ image\ 1.jpg);
