--- a/public/index/index.html
+++ b/public/index/index.html
@@ -12,7 +12,7 @@
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"></script>
-   <link rel="stylesheet" href="CssAsset/PortFolio.css">
+   <link rel="stylesheet" href="cssAsset/PortFolio.css">
    <style>
       .dropdown {
          margin-top: 20px;
@@ -133,14 +133,12 @@
         });
 </script>
 
-<script src="JsAsset/head.js"></script>
+<script src="jsAsset/head.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>
       AOS.init();
     </script>
-   <script src="JsAsset/MyPortfolio.js">
-      
-   </script>
+   
    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
       crossorigin="anonymous"></script>
