--- a/public/Career/CommonFiles/header.html
+++ b/public/Career/CommonFiles/header.html
@@ -35,7 +35,7 @@
         <a
           class="NavAnchor pt-2 pb-2"
           style="color: rgba(255, 217, 0, 0.884)"
-          href="/index"
+          href="/"
           ><img
             class="headerLogo rounded"
             src="ImgAsset/AK_logo_main.jpeg"
