--- a/public/Career/index.html
+++ b/public/Career/index.html
@@ -20,7 +20,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="CssAsset/CareerStats.css" />
+    <link rel="stylesheet" href="cssAsset/CareerStats.css" />
     <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
