--- a/public/Projects/index.html
+++ b/public/Projects/index.html
@@ -19,7 +19,7 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="CssAsset/Project.css" />
+    <link rel="stylesheet" href="cssAsset/Project.css" />
     <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
