--- a/public/Skills/index.html
+++ b/public/Skills/index.html
@@ -23,7 +23,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="CssAsset/myskills.css" />
+    <link rel="stylesheet" href="cssAsset/myskills.css" />
     <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
