Test port folio main (#1)
* structure files better way

* small change

* small changes

* small mistakes on package file

* navBtn changes

--- a/public/Career/index.html
+++ b/public/Career/index.html
@@ -20,7 +20,8 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="CssAsset/CareerStats.css" />
+    <link rel="stylesheet" href="cssAsset/CareerStats.css" />
+    <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
         background-image: url(ImgAsset/careerBG.jpg);
@@ -188,7 +189,7 @@
       </div>
     </div>
     <div id="footer-placeholder"></div>
-    <script src="JsAsset/Career.js"></script>
+    <script src="jsAsset/Career.js"></script>
     <script>
       fetch("CommonFiles/header.html")
         .then((response) => response.text())
@@ -210,7 +211,7 @@
     <script>
       AOS.init();
     </script>
-    <script src="JsAsset/head.js"></script>
+    <script src="jsAsset/head.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
