--- a/public/Projects/index.html
+++ b/public/Projects/index.html
@@ -19,7 +19,8 @@
       integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="CssAsset/Project.css" />
+    <link rel="stylesheet" href="cssAsset/Project.css" />
+    <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
         background-image: url(ImgAsset/bg5.webp);
@@ -140,7 +141,7 @@
 
       console.log("hey");
     </script>
-    <script src="JsAsset/head.js"></script>
+    <script src="jsAsset/head.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
