--- a/public/Skills/index.html
+++ b/public/Skills/index.html
@@ -23,7 +23,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
     />
-    <link rel="stylesheet" href="CssAsset/myskills.css" />
+    <link rel="stylesheet" href="cssAsset/myskills.css" />
+    <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
         background-image: url(ImgAsset/BG\ coding\ image\ 1.jpg);
@@ -148,7 +149,7 @@
           document.getElementById("footer-placeholder").innerHTML = data;
         });
     </script>
-    <script src="JsAsset/head.js"></script>
+    <script src="jsAsset/head.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
