--- a/public/Career/CommonFiles/header.html
+++ b/public/Career/CommonFiles/header.html
@@ -56,7 +56,11 @@
             <a class="NavAnchor" href="#foot">Contact</a>
           </li>
         </ul>
-        <button onclick="NavButton(this)" class="NavBtn rounded d-none">
+        <button
+          onclick="NavButton(this)"
+          class="NavBtn rounded"
+          style="display: none"
+        >
           <i class="fa-solid fa-bars"></i>
         </button>
       </div>
