--- a/public/Career/index.html
+++ b/public/Career/index.html
@@ -67,11 +67,7 @@
             <p class="fs-5 z-2"><b>2011-2017</b></p>
           </div>
           <p class="fs-1 z-2"><b>Secondary Education</b></p>
-          <button
-            onclick="careerOpen(this)"
-            class="w-25 rounded z-2"
-            style="background-color: rgba(255, 238, 0, 0.915)"
-          >
+          <button onclick="careerOpen(this)" class="rounded z-2 careerBtn">
             <b> Get Details <i class="fa-regular fa-hand-point-down"></i></b>
           </button>
           <div
@@ -89,11 +85,7 @@
             <p class="fs-5"><b>2017-2019</b></p>
           </div>
           <p class="fs-1 z-2"><b>Higher Secondary Education</b></p>
-          <button
-            onclick="careerOpen(this)"
-            class="w-25 rounded z-2"
-            style="background-color: rgba(255, 238, 0, 0.915)"
-          >
+          <button onclick="careerOpen(this) " class="rounded z-2 careerBtn">
             <b> Get Details <i class="fa-regular fa-hand-point-down"></i></b>
           </button>
           <div
@@ -115,11 +107,7 @@
             <p class="fs-5"><b>2019-2022</b></p>
           </div>
           <p class="fs-1 z-2"><b>Diploma Engineering</b></p>
-          <button
-            onclick="careerOpen(this)"
-            class="w-25 rounded z-2"
-            style="background-color: rgba(255, 238, 0, 0.915)"
-          >
+          <button onclick="careerOpen(this)" class="rounded z-2 careerBtn">
             <b> Get Details <i class="fa-regular fa-hand-point-down"></i></b>
           </button>
           <div
@@ -138,11 +126,7 @@
             <p class="fs-5"><b>2022-2025</b></p>
           </div>
           <p class="fs-1 z-2"><b>Graduation (BTech Engineering)</b></p>
-          <button
-            onclick="careerOpen(this)"
-            class="w-25 rounded z-2"
-            style="background-color: rgba(255, 238, 0, 0.915)"
-          >
+          <button onclick="careerOpen(this)" class="rounded z-2 careerBtn">
             <b> Get Details <i class="fa-regular fa-hand-point-down"></i></b>
           </button>
           <div
@@ -170,11 +154,7 @@
           <p class="fs-5"><b>2023(24th July-31st Oct)</b></p>
         </div>
         <p class="fs-1 z-2"><b>Webreate (Frontend Web Developer)</b></p>
-        <button
-          onclick="careerOpen(this)"
-          class="w-25 rounded z-2"
-          style="background-color: rgba(255, 238, 0, 0.915)"
-        >
+        <button onclick="careerOpen(this)" class="rounded z-2 careerBtn">
           <b> Get Details <i class="fa-regular fa-hand-point-down"></i></b>
         </button>
         <div style="display: none" class="career-details flex-column fs-4 p-3">
