--- a/public/Projects/CommonFiles/footer.html
+++ b/public/Projects/CommonFiles/footer.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../CssAsset/PortFolio.css" />
+    <link rel="stylesheet" href="../cssAsset/PortFolio.css" />
   </head>
   <body>
+    <img class="uppermsg mt-4" src="../ImgAsset/uppermsg.jpg" alt=""> 
     <div id="foot">
       <div class="d-flex flex-column justify-content-center fs-1 fw-bold text-black">
         <p class="text-center">Hey My lovely <span class="text-warning fw-bolder">Viewers!!</span></p>
@@ -21,7 +22,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  placeholder="First name"
+                  placeholder="First Name"
                   aria-label="First name"
                   name="FirstName"
                 />
@@ -30,7 +31,7 @@
                 <input
                   type="text"
                   class="form-control"
-                  placeholder="Last name"
+                  placeholder="Last Name"
                   aria-label="Last name"
                   name="LastName"
                 />
@@ -45,7 +46,7 @@
                 class="form-control"
                 name="MobileNumber"
                 id="formGroupExampleInput"
-                placeholder="Example input placeholder"
+                placeholder="Enter MobileNumber"
               />
             </div>
             <div class="mb-3">
@@ -57,7 +58,7 @@
                 class="form-control"
                 id="formGroupExampleInput2"
                 name="CollegeName"
-                placeholder="Another input placeholder"
+                placeholder="Enter CollegeName"
               />
             </div>
             <div class="form-floating">
@@ -69,12 +70,12 @@
                 placeholder="Leave a comment here"
                 id="floatingTextarea2"
                 name="Message"
-                style="height: 100px"
+                style="height: 100px;color: black !important;"
               ></textarea>
-              <label for="floatingTextarea2">Comments</label>
+              <label for="floatingTextarea2"><span style="color: black !important;">Comments down here</span></label>
             </div>
             <div class="d-grid gap-2 col-3 mx-auto mb-2">
-              <button class="btn btn-warning" type="submit">Button</button>
+              <button class="btn btn-warning" type="submit">Submit</button>
             </div>
           </form>
         </div>
