--- a/public/index/index.html
+++ b/public/index/index.html
@@ -40,7 +40,7 @@
             <p class="card-text" style="font-style: italic;">Hi, I am Arnab Kundu from West Bengal, India and a student
                of Kalyani Government
                Engineering College.<b>Explore My Profile</b></p>
-            <a href="index.html" class="btn btn-success">HomePage</a>
+            <a href="ImgAsset/ArnabCV.pdf" class="btn btn-success fw-bold text-warning" >Check My Resume</a>
       </div>
    </div>
    <p class="mt-5 fs-2" ><b>I am generally known to everyone for some of my qualities like :- </b></p>
