--- a/public/index/CommonFiles/header.html
+++ b/public/index/CommonFiles/header.html
@@ -70,6 +70,9 @@
         class="flex-column NavUl pt-2 pb-0 ps-0"
       >
         <li class="NavItems ms-0 pb-2 border-bottom">
+          <a class="NavAnchor text-opacity-25" href="/">HomePage</a>
+        </li>
+        <li class="NavItems ms-0 pb-2 border-bottom">
           <a class="NavAnchor text-opacity-25" href="/skills">My Skills</a>
         </li>
         <li class="NavItems ms-0 pb-2 border-bottom">
