header color change

--- a/public/Career/index.html
+++ b/public/Career/index.html
@@ -47,10 +47,18 @@
     <div id="imported-content-placeholder"></div>
     <div class="career-container">
       <div class="fixCareer">
-        <a class="subCareer" id="subCareer1" href="#education"
+        <a
+          class="subCareer border-3 border-bottom border-primary"
+          id="subCareer1"
+          href="#education"
           >Education Details</a
         >
-        <a class="subCareer" id="subCareer2" href="#experience">Experience</a>
+        <a
+          class="subCareer m-0 p-0 border-top border-primary"
+          id="subCareer2"
+          href="#experience"
+          >Experience</a
+        >
       </div>
       <p class="career-heading rounded mt-5"><b>Career Statistics</b></p>
       <div>
