--- a/public/Career/index.html
+++ b/public/Career/index.html
@@ -47,18 +47,15 @@
     <div id="imported-content-placeholder"></div>
     <div class="career-container">
       <div class="fixCareer">
-        <a
-          class="subCareer border-3 border-bottom border-primary"
+        <p
           id="subCareer1"
-          href="#education"
-          >Education Details</a
+          class="border-3 border-bottom border-primary m-0 pt-3 pb-3"
         >
-        <a
-          class="subCareer m-0 p-0 border-top border-primary"
-          id="subCareer2"
-          href="#experience"
-          >Experience</a
-        >
+          <a class="subCareer" href="#education">Education Details</a>
+        </p>
+        <p id="subCareer2" class="border-3 border-primary m-0 pt-3 pb-3">
+          <a class="subCareer" href="#experience">Experience</a>
+        </p>
       </div>
       <p class="career-heading rounded mt-5"><b>Career Statistics</b></p>
       <div>
