--- a/public/Projects/index.html
+++ b/public/Projects/index.html
@@ -54,6 +54,26 @@
           <th>Link</th>
         </tr>
         <tr>
+          <td>Movie Mafia</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/movie-mafia">GitLink</a>
+          </td>
+          <td>
+            <a href="https://tranquil-starship-26fac6.netlify.app/"
+              >WebsiteLink</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>E-Diary</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/Career-Book">GitLink</a>
+          </td>
+          <td>
+            <a href="https://career-book.vercel.app/">WebsiteLink</a>
+          </td>
+        </tr>
+        <tr>
           <td>Public Registration Portal</td>
           <td>
             <a href="https://github.com/ArnabKundu10/Public-Registration-Portal"
@@ -67,32 +87,7 @@
             >
           </td>
         </tr>
-        <tr>
-          <td>My Beginner Portfolio</td>
-          <td>
-            <a href="https://github.com/ArnabKundu10/My_Beginner_Portfolio"
-              >GitLink</a
-            >
-          </td>
-          <td>
-            <a href="https://arnabkundu10.github.io/My_Beginner_Portfolio/"
-              >WebsiteLink</a
-            >
-          </td>
-        </tr>
-        <tr>
-          <td>PostOffice Website</td>
-          <td>
-            <a href="https://github.com/ArnabKundu10/PostOffice-Portal-Design"
-              >GitLink</a
-            >
-          </td>
-          <td>
-            <a href="https://arnabkundu10.github.io/PostOffice-Portal-Design/"
-              >WebsiteLink</a
-            >
-          </td>
-        </tr>
+
         <tr>
           <td>Guess The Case</td>
           <td>
@@ -110,7 +105,31 @@
             <a href="https://github.com/ArnabKundu10/MainPortfolio">GitLink</a>
           </td>
           <td>
-            <a href="https://arnabkundu10.github.io/MainPortfolio/"
+            <a href="https://mainportfolio-74ww.onrender.com/">WebsiteLink</a>
+          </td>
+        </tr>
+        <tr>
+          <td>PostOffice Website</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/PostOffice-Portal-Design"
+              >GitLink</a
+            >
+          </td>
+          <td>
+            <a href="https://arnabkundu10.github.io/PostOffice-Portal-Design/"
+              >WebsiteLink</a
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>My Beginner Portfolio</td>
+          <td>
+            <a href="https://github.com/ArnabKundu10/My_Beginner_Portfolio"
+              >GitLink</a
+            >
+          </td>
+          <td>
+            <a href="https://arnabkundu10.github.io/My_Beginner_Portfolio/"
               >WebsiteLink</a
             >
           </td>
