--- a/public/Skills/index.html
+++ b/public/Skills/index.html
@@ -27,8 +27,12 @@
     <link rel="stylesheet" href="cssAsset/PortFolio.css" />
     <style>
       body {
-        background-image: url(ImgAsset/BG\ coding\ image\ 1.jpg);
-        background-size: cover;
+        background: linear-gradient(
+          to right bottom,
+          black,
+          rgb(52, 51, 51, 0.5),
+          black
+        );
         overflow-x: hidden !important;
       }
 
@@ -42,7 +46,7 @@
     </style>
   </head>
 
-  <body class="bg-dark p-2 text-white bg-opacity-80">
+  <body class="p-2 text-white bg-opacity-80">
     <div class="upArrow z-3 rounded-circle">
       <a class="upAnchor" href="#header-placeholder"
         ><i class="fa-solid fa-arrow-up"></i
