--- a/public/index/index.html
+++ b/public/index/index.html
@@ -46,9 +46,9 @@
    <p class="mt-5 fs-2" ><b>I am generally known to everyone for some of my qualities like :- </b></p>
    <p class="homeFirstElement fs-1 rounded"></p>
    <div class="fs-3 fw-bolder text-center" >
-      <i class="fa-solid fa-down-long text-success"></i> 
-      <span style="color: goldenrod;">-:My Life Motto:-</span>
-      <i class="fa-solid fa-down-long text-success"></i>
+      <i class="fa-solid fa-down-long text-success fs-1"></i> 
+      <span style="color: goldenrod;">My Life Motto</span>
+      <i class="fa-solid fa-down-long text-success fs-1"></i>
    </div>
       
    <div class="Quotes">
